Implementation of the GitHub API.
This has been done because the imported one is out of date and not
supported any more.